fixing related post top spacing

--- a/SCSS/theme/_theme-style.scss
+++ b/SCSS/theme/_theme-style.scss
@@ -2990,6 +2990,9 @@ ul.wp-block-gallery {
 }
 
 /* Related Posts */
+.related-posts-wrapper{
+	margin-top: 30px;
+}
 .related-posts-main-title {
 }
 
